--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,9 @@
     <link rel="shortcut icon" href="./img/icon.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/first.css">
-    <link rel="stylesheet" href="./fontawesome/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Quantico&display=swap" rel="stylesheet">
+<!--     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
+ -->    <link href="https://fonts.googleapis.com/css?family=Cinzel|Quantico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>E-vote Nepal</title>
   </head>
 
@@ -86,6 +87,60 @@
           </div>
 
         </header>
+
+
+
+          <!-- main content here -->
+          <div id="main-content" class="container">hello here is content</div>
+
+
+
+
+          <footer id="footer" class="footer ">
+            <div class="container">
+                <div class="row ">             
+                    <div class="col-4 offset-1 col-sm-2">
+                        <h5>Useful Links</h5>
+                        <ul class="list-unstyled">
+                            <li><a target="_blank" href="http://www.election.gov.np/election/np">Election Commission</a></li>
+                            <li><a target="_blank" href="http://www.nepal.gov.np"">Nepal Government</a></li>
+                            <li><a target="_blank" href="https://www.nepalpolice.gov.np">Nepal Police</a></li>
+                            <li><a target="_blank" href="https://www.opmcm.gov.np">Office of the Prime Minister</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-7 col-sm-5">
+                        <h5>Address</h5>
+                        <address>
+                          Election Commission<br>
+                          Kathmandu<br>
+                          NEPAL<br>
+                          <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
+                          <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
+                          <i class="fa fa-envelope fa-lg"></i>: 
+                          <a href="nep.gov.np">nep.gov.np</a>
+                        </address>
+                    </div>
+
+                    <!-- remedy required........ 
+                    <div class="col-12 col-sm-4 align-self-center">
+                            <div class="text-center">
+                                    <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fab fa-google"></i></a>
+                                    <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fab fa-facebook-square fa-2x"></i></a>
+                                    <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fab fa-linkedin fa-2x"></i></a>
+                                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fab fa-twitter fa-2x"></i></a>
+                                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fab fa-youtube fa-2x"></i></a>
+                                    <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+                                </div>
+                    </div>  -->
+                </div>   
+
+                <div class="row justify-content-center">             
+                    <div class="col-auto">
+                        <p>© Copyright 2019 Online Voting Portal, Nepal</p>
+                    </div>
+                </div>
+          </div>
+        </footer>
   </body>
 
 
