--- a/client/index.html
+++ b/client/index.html
@@ -91,7 +91,7 @@
 
 
           <!-- main content here -->
-          <div id="main-content" class="container">hello here is content</div>
+          <div id="main-content" class="container"></div>
 
 
 
@@ -141,6 +141,11 @@
                 </div>
           </div>
         </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    
+    
+    <script src="javascript/ajax-utils.js"></script>
+    <script src="javascript/first.js"></script>
   </body>
 
 
