--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
                               
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                   <ul class="navbar-nav mr-auto navText">
-                                    <li  id="navHomeButton" class="nav-item active">
+                                    <li  id="navHomeButton" class="nav-item">
                                       <a class="nav-link"  href="index.html">Home <span class="sr-only">(current)</span></a>
                                     </li>
                                     <li id="navRegisterButton" class="nav-item">
