--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="./img/icon.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/first.css">
+    
 <!--     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
  -->    <link href="https://fonts.googleapis.com/css?family=Cinzel|Quantico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -91,7 +92,7 @@
 
 
           <!-- main content here -->
-          <div id="main-content" class="container"></div>
+          <div style="padding: 50px 0px 50px 0px;" id="main-content" class="container"></div>
 
 
 
