--- a/client/snippets/home.html
+++ b/client/snippets/home.html
@@ -1,4 +1,4 @@
-<div  id="content" class="row">
+<div  id="content" class="container">
         <!-- First Content -->
               <img id="img-1" src="../img/sunset-clouds-sky-mountains-peak.jpg" class="img-fluid" alt="Mountain" >
 </div>
