--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./img/icon.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/first.css">
-    
+
 <!--     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
  -->    <link href="https://fonts.googleapis.com/css?family=Cinzel|Quantico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -61,19 +61,19 @@
                                       <a class="nav-link " onclick="$dc.getStatus();" href="#">Status Check</a>
                                     </li>
                                     <li id="" class="nav-item">
-                                        <a class="nav-link " onclick="$dc.getStatus();" href="#">Dashboard</a>
+                                        <a class="nav-link " onclick="$dc.getDashboard();" href="#">Dashboard</a>
 
                                     </li>
                                     <li id="" class="nav-item">
-                                        <a class="nav-link " onclick="$dc.getStatus();" href="#">Checker</a>
+                                        <a class="nav-link " onclick="$dc.getChecker();" href="#">Checker</a>
 
                                     </li>
                                     <li id="" class="nav-item">
-                                        <a class="nav-link " onclick="$dc.getStatus();" href="#">Result</a>
+                                        <a class="nav-link " onclick="$dc.getResult();" href="#">Result</a>
 
                                     </li>
                                     <li id="" class="nav-item">
-                                        <a class="nav-link " onclick="$dc.getStatus();" href="#">Help</a>
+                                        <a class="nav-link " onclick="$dc.getHelp();" href="#">Help</a>
 
                                     </li>
                                   </ul>
@@ -145,8 +145,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    
     
-    <script src="javascript/ajax-utils.js"></script>
-    <script src="javascript/first.js"></script>
+<!--     <script src="javascript/ajax-utils.js"></script>
+ -->    <script src="javascript/first.js"></script>
   </body>
 
 
