--- a/client/snippets/checker.html
+++ b/client/snippets/checker.html
@@ -36,7 +36,7 @@
 
                   <div class="row" style="padding: 15px; border: 1px solid black; margin-top: 20px; ">
                     <div class="col-12 text-center">
-                      <h3 id="ff"></h3>
+                      <h3 id="ff" style="color:green;"> All OK!</h3>
                     </div>
                   </div>    
                 </div>  
