--- a/client/snippets/registration.html
+++ b/client/snippets/registration.html
@@ -33,17 +33,17 @@
       <h1>Sign Up</h1>
       <p>Please fill in this form to register for e-Voting.</p>
       <hr>
-      <form>
+      <form autocomplete="off">
           <div class="form-group" style="padding: 15px;">
             <label for="Citizenship"><b>Your Citizenship Number</b></label>
             <input id="Citizenship" type="number" class="form-control" placeholder="Enter your Citizenship Number here" name="citizen" required>
             <!--small id="ctznhelp" class="form-text text-muted">Enter your 13 digit citizenship number</small-->
           </div>
-          <div class="form-group" style="padding: 15px;">
+          <!-- <div class="form-group" style="padding: 15px;">
             <label for="location"><b>Your location</b></label>
             <input id="location" type="number" class="form-control" placeholder="Enter your three digit code here" name="code" required>
-            <!--small id="ctznhelp" class="form-text text-muted">Enter your 13 digit citizenship number</small-->
-          </div>
+            small id="ctznhelp" class="form-text text-muted">Enter your 13 digit citizenship number</small>
+          </div> -->
           
           <div class="form-check">
             <label>
@@ -53,7 +53,7 @@
           </div>
           
           <div class="clearfix">
-            <button  onclick="$dc.validateForm()" class="signupbtn">Sign up</button>
+            <button  onclick="$dc.validateForm()" type="button"  >Sign up</button>
             <!--button type="submit" class="cancelbtn">Cancel</button-->
             </div>
         </form>
